--- a/asgn4/asgn4.html
+++ b/asgn4/asgn4.html
@@ -23,23 +23,29 @@
                 <br><br><br><br>
 
                 <p style="margin-bottom: 0px; padding: 0px;" id="lightXtext">Light X</p>
-                <input type="range" min="-25" max="25" value="0" id="lightXslider" oninput="">
+                <input type="range" min="-48" max="48" value="0" id="lightXslider" oninput="">
                 <button onclick="resetSlider('lightXslider')">Reset</button>
 
                 <p style="margin-bottom: 0px; padding: 0px;" id="lightYtext">Light Y</p>
-                <input type="range" min="-25" max="25" value="0" id="lightYslider" oninput="">
+                <input type="range" min="-48" max="48" value="25" id="lightYslider" oninput="">
                 <button onclick="resetSlider('lightYslider')">Reset</button>
 
                 <p style="margin-bottom: 0px; padding: 0px;" id="lightZtext">Light Z</p>
-                <input type="range" min="-25" max="25" value="0" id="lightZslider" oninput="">
+                <input type="range" min="-48" max="48" value="0" id="lightZslider" oninput="">
                 <button onclick="resetSlider('lightZslider')">Reset</button> <br><br>
 
                 <label style="margin-bottom: 0px; padding: 0px;" for="lightColorPicker">Light Color</label>
-                <input type="color" name="lightColorPicker" id="lightColorPicker"> <br><br>
+                <input type="color" name="lightColorPicker" id="lightColorPicker" value="#FFFFFF"> <br><br>
 
-                <button onclick="setRenderMode(0)">Render Normals</button> <br><br>
-                <button onclick="setRenderMode(1)">Lighting Off</button> <br><br>
-                <button onclick="setRenderMode(5)">Lighting On</button> <br><br>
+                <button onclick="setRenderMode(0)">Render Normals</button>
+                <button onclick="setRenderMode(1)">Lighting Off</button>
+                <button onclick="setRenderMode(5)">Lighting On</button> <br>
+
+                <p style="margin-bottom: 0px; padding: 0px;">Light type:</p>
+                <select id="lightSelector">
+                    <option value="point">Point</option>
+                    <option value="spotlight">Spotlight</option>
+                </select>
             </div>
 
 
