update features.html, update page header

--- a/asgn4/asgn4.html
+++ b/asgn4/asgn4.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>asgn3b</title>
+        <title>asgn4</title>
         <link rel="shortcut icon" href="#"> <!-- to silence the stupid favicon not found error-->
         <!-- <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">-->
         <link rel="stylesheet" href="site/styles.css"> 
