--- a/asgn3b/asgn3b.html
+++ b/asgn3b/asgn3b.html
@@ -25,7 +25,7 @@
 
                 <p style="margin-bottom: 0px; padding: 0px;" id="mouseSensitivityText">Mouse Sensitivity</p>
                 <input type="range" min="125" max="1000" value="250" class="slider" id="mouseSensitivitySlider" oninput="updateMouseSensitivity()">
-                <button class="btn-minecraft" onclick="resetSlider('mouseSensitivitySlider')">Reset</button>
+                <button class="btn-minecraft" onclick="resetSlider('mouseSensitivitySlider')">Reset</button> <br>
 
                 <span style="margin-bottom: 0px; padding: 0px; font-size: 13px;">Disable Tree/Cactus spawning</span>
                 <input type="checkbox" id="disableFoliageCheckbox">
