asgn5c files, working player controller, cube sphere generation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="asgn4/asgn4.html">Assignment 4: Lighting</a></li>
         <li><a href="asgn5a/asgn5a.html">Assignment 5A</a></li>
         <li><a href="asgn5b/asgn5b.html">Assignment 5B</a></li>
+        <li><a href="asgn5c/asgn5c.html">Assignment 5C</a></li>
     </ul>
 </body>
 </html>
