--- a/asgn5c/asgn5c.html
+++ b/asgn5c/asgn5c.html
@@ -31,6 +31,7 @@
         <script type="module" src="simplex-noise.js"></script>
         <script src="perlin.js"></script>
         <script src="Noise.js"></script>
+        <script type="module" src="LookupTable.js"></script>
         <script type="module" src="asgn5c.js"></script>
         
 
