--- a/asgn5c/asgn5c.html
+++ b/asgn5c/asgn5c.html
@@ -33,6 +33,7 @@
         <script type="module" src="Noise.js"></script>
         <script type="module" src="LookupTable.js"></script>
         <script type="module" src="Chunk.js"></script>
+        <script type="module" src="InfiniteTerrain.js"></script>
         <script type="module" src="asgn5c.js"></script>
         
 
