moved post process to new file, removed all fog code, cleaned up code more

--- a/asgn5c/asgn5c.html
+++ b/asgn5c/asgn5c.html
@@ -27,6 +27,7 @@
         <script type="module" src="PlayerController.js"></script>
         <script type="module" src="UIManager.js"></script>
         <script type="module" src="WaterShader.js"></script>
+        <script type="module" src="UnderwaterShader.js"></script>
         <script type="module" src="asgn5c.js"></script>
         
 
