cleaned up old files, removed old code, reorganized, add ocean + underwater sounds depending on y-level

--- a/asgn5c/asgn5c.html
+++ b/asgn5c/asgn5c.html
@@ -17,13 +17,9 @@
 
     <body>
         <canvas id="webgl" width="853" height="480">
-            <div class="split">
-                <div id="view1" tabindex="1"></div>
-                <div id="view2" tabindex="2"></div>
-             </div>
+            Use a browser that supports canvas
         </canvas>
 
-        <script src="MinMaxGUIHelper.js"></script>
         <script type="module" src="PlayerController.js"></script>
         <script type="module" src="UIManager.js"></script>
         <script type="module" src="WaterShader.js"></script>
@@ -31,7 +27,7 @@
         <script type="module" src="asgn5c.js"></script>
         
 
-        <p id="fpsCounter">FPS: </p>
+        <!-- <p id="fpsCounter">FPS: </p>
 
         <label>Use environment reflections</label>
         <input id="envReflectCheckbox" type="checkbox" checked="true">
@@ -39,15 +35,14 @@
 
         <label>Use subsurface scattering</label>
         <input id="scatteringCheckbox" type="checkbox" checked="true">
-        <br>
+        <br> -->
 
-
-        <input type="range" min="-200" max="200" value="0" class="slider" id="slider1">
+        <!-- <input type="range" min="-200" max="200" value="0" class="slider" id="slider1">
         <input type="range" min="-200" max="200" value="0" class="slider" id="slider2">
         <input type="range" min="-200" max="200" value="0" class="slider" id="slider3"> <br>
 
         <label style="margin-bottom: 0px; padding: 0px;">Water Color</label>
-        <input type="color" id="colorPicker" value="#003C4F"> <br><br>
+        <input type="color" id="colorPicker" value="#003C4F"> <br><br> -->
 
     </body>
 </html>
