--- a/asgn5c/features.html
+++ b/asgn5c/features.html
@@ -14,6 +14,6 @@ Then for lighting I calculated the normals per vertex by taking the derivative o
 
 I also added a post processing effect that tints the screen blue when the camera goes under the water. <br><br>
 
-I also added ambient sounds. When the camera is above the water, it plays ocean ambience. When the camera is below the water, it switches to underwater ambience sounds. <br><br>
+I also added ambient sounds. When the camera is above the water, it plays ocean ambience. When the camera is below the water, it switches to underwater ambience sounds. (Because of security policies that disallow audio from being played until the user does something on the page, you might need to wiggle the camera above and below the water several times for it to start playing)<br><br>
 
 https://developer.nvidia.com/gpugems/gpugems/part-i-natural-effects/chapter-1-effective-water-simulation-physical-models
