--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
         <li><a href="asgn5b/asgn5b.html">Assignment 5B</a></li>
         <li><a href="asgn5c/asgn5c.html">Assignment 5C</a></li>
     </ul>
+    <h4>Updated:</h4>
+    <ul>
+        <li><a href="asgn3b-optimized/asgn3b.html">Assignment 3B: Blocky World (Part 2) Optimized</a></li>
+    </ul>
 </body>
 </html>
